// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Input /> Snapshots should match with default input 1`] = `
.c1 {
  position: relative;
  display: inline-block;
  vertical-align: top;
  height: 52px;
}

.c1 {
  width: 320px;
}

.c1 svg {
  position: absolute;
  top: 0;
  right: 0;
  padding-right: 16px;
  padding-left: 8px;
  height: 52px;
  width: 20px;
  fill: #6B6B78;
  outline: none;
  box-sizing: content-box;
  cursor: pointer;
}

.c1 svg:hover,
.c1 svg:focus {
  fill: #231B22;
}

.c1:focus-within legend {
  max-width: 1000px;
  font-weight: 700;
}

.c1:hover fieldset,
.c1:focus-within fieldset {
  border-color: #231B22;
}

.c2 {
  width: 100%;
  background-color: transparent;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  outline: none;
  height: 100%;
  padding-top: 16px;
  padding-right: 40px;
  padding-bottom: 16px;
  padding-left: 16px;
  color: #231B22;
  border: none;
  font-family: Rubik,sans-serif;
  font-size: 14px;
  font-weight: 400;
  box-sizing: border-box;
}

.c2:focus {
  color: #231B22;
}

.c2:focus + label {
  top: 0;
  left: 16px;
  font-size: 12px;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
  -webkit-transition-duration: 500ms;
  transition-duration: 500ms;
  -webkit-transition-timing-function: cubic-bezier(0,0.75,0.1,1);
  transition-timing-function: cubic-bezier(0,0.75,0.1,1);
  font-weight: 700;
  color: #231B22;
}

.c2:disabled {
  cursor: not-allowed;
  color: #F5F5FA;
}

.c2::-webkit-input-placeholder {
  color: #6B6B78;
}

.c2::-moz-placeholder {
  color: #6B6B78;
}

.c2:-ms-input-placeholder {
  color: #6B6B78;
}

.c2::placeholder {
  color: #6B6B78;
}

.c2[type="number"]::-webkit-outer-spin-button,
.c2[type="number"]::-webkit-inner-spin-button {
  display: none;
}

.c2:invalid {
  box-shadow: none;
}

.c4 {
  position: absolute;
  top: -7px;
  left: 0;
  padding: 0;
  padding-left: 0px;
  right: 0;
  bottom: 0;
  margin: 0;
  pointer-events: none;
  border-radius: 8px;
  border: 1px solid #D7D7E0;
  padding-left: 12px;
}

.c5 {
  position: relative;
  padding: 0;
  max-width: 0.01px;
  width: auto;
  height: 14px;
  font-weight: normal;
  -webkit-transition: max-width ease 50ms;
  transition: max-width ease 50ms;
  visibility: hidden;
  max-width: 0.01px;
  font-size: 12px;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
}

.c6 {
  padding-left: 4px;
  padding-right: 4px;
}

.c3 {
  position: absolute;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  pointer-events: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  top: 24px;
  left: 16px;
  font-size: 14px;
  font-weight: 400;
  color: #6B6B78;
  -webkit-transform: translateY(-40%);
  -ms-transform: translateY(-40%);
  transform: translateY(-40%);
  -webkit-transition-duration: 500ms;
  transition-duration: 500ms;
  -webkit-transition-timing-function: cubic-bezier(0,0.75,0.1,1);
  transition-timing-function: cubic-bezier(0,0.75,0.1,1);
}

.c0 {
  box-sizing: border-box;
  width: 320px;
}

<div>
  <div
    class="c0"
  >
    <div
      class="c1"
      label="Label"
    >
      <input
        class="c2"
        value=""
      />
      <label
        class="c3"
      >
        Label
      </label>
      <fieldset
        class="c4"
      >
        <legend
          class="c5"
        >
          <span
            class="c6"
          >
            Label
          </span>
        </legend>
      </fieldset>
    </div>
  </div>
</div>
`;

exports[`<Input /> Snapshots should match with disabled input 1`] = `
.c1 {
  position: relative;
  display: inline-block;
  vertical-align: top;
  height: 52px;
  border-color: #F5F5FA;
  color: #F5F5FA;
}

.c1 {
  width: 320px;
}

.c1 svg {
  position: absolute;
  top: 0;
  right: 0;
  padding-right: 16px;
  padding-left: 8px;
  height: 52px;
  width: 20px;
  fill: #6B6B78;
  outline: none;
  box-sizing: content-box;
  cursor: pointer;
}

.c1 svg:hover,
.c1 svg:focus {
  fill: #231B22;
}

.c1:focus-within legend {
  max-width: 1000px;
  font-weight: 700;
}

.c1:hover fieldset,
.c1:focus-within fieldset {
  border-color: #231B22;
  border-color: #F5F5FA;
}

.c1 svg {
  fill: #F5F5FA;
  pointer-events: none;
}

.c1 fieldset {
  border-color: #F5F5FA;
}

.c2 {
  width: 100%;
  background-color: transparent;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  outline: none;
  height: 100%;
  padding-top: 16px;
  padding-right: 40px;
  padding-bottom: 16px;
  padding-left: 16px;
  color: #231B22;
  border: none;
  font-family: Rubik,sans-serif;
  font-size: 14px;
  font-weight: 400;
  box-sizing: border-box;
}

.c2:focus {
  color: #231B22;
}

.c2:focus + label {
  top: 0;
  left: 16px;
  font-size: 12px;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
  -webkit-transition-duration: 500ms;
  transition-duration: 500ms;
  -webkit-transition-timing-function: cubic-bezier(0,0.75,0.1,1);
  transition-timing-function: cubic-bezier(0,0.75,0.1,1);
  font-weight: 700;
  color: #231B22;
}

.c2:disabled {
  cursor: not-allowed;
  color: #F5F5FA;
}

.c2::-webkit-input-placeholder {
  color: #6B6B78;
}

.c2::-moz-placeholder {
  color: #6B6B78;
}

.c2:-ms-input-placeholder {
  color: #6B6B78;
}

.c2::placeholder {
  color: #6B6B78;
}

.c2[type="number"]::-webkit-outer-spin-button,
.c2[type="number"]::-webkit-inner-spin-button {
  display: none;
}

.c2:invalid {
  box-shadow: none;
}

.c4 {
  position: absolute;
  top: -7px;
  left: 0;
  padding: 0;
  padding-left: 0px;
  right: 0;
  bottom: 0;
  margin: 0;
  pointer-events: none;
  border-radius: 8px;
  border: 1px solid #D7D7E0;
  padding-left: 12px;
}

.c5 {
  position: relative;
  padding: 0;
  max-width: 0.01px;
  width: auto;
  height: 14px;
  font-weight: normal;
  -webkit-transition: max-width ease 50ms;
  transition: max-width ease 50ms;
  visibility: hidden;
  max-width: 0.01px;
  font-size: 12px;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
}

.c6 {
  padding-left: 4px;
  padding-right: 4px;
}

.c3 {
  position: absolute;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  pointer-events: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  top: 24px;
  left: 16px;
  font-size: 14px;
  font-weight: 400;
  color: #6B6B78;
  -webkit-transform: translateY(-40%);
  -ms-transform: translateY(-40%);
  transform: translateY(-40%);
  -webkit-transition-duration: 500ms;
  transition-duration: 500ms;
  -webkit-transition-timing-function: cubic-bezier(0,0.75,0.1,1);
  transition-timing-function: cubic-bezier(0,0.75,0.1,1);
  color: #F5F5FA;
}

.c0 {
  box-sizing: border-box;
  width: 320px;
}

<div>
  <div
    class="c0"
  >
    <div
      class="c1"
      disabled=""
      label="Label"
    >
      <input
        class="c2"
        disabled=""
        value=""
      />
      <label
        class="c3"
        disabled=""
      >
        Label
      </label>
      <fieldset
        class="c4"
        disabled=""
      >
        <legend
          class="c5"
        >
          <span
            class="c6"
          >
            Label
          </span>
        </legend>
      </fieldset>
    </div>
  </div>
</div>
`;

exports[`<Input /> Snapshots should match with error 1`] = `
.c1 {
  position: relative;
  display: inline-block;
  vertical-align: top;
  height: 52px;
  border-color: #FF874C;
}

.c1 {
  width: 320px;
}

.c1 fieldset {
  border-color: #FF874C;
}

.c1 svg {
  position: absolute;
  top: 0;
  right: 0;
  padding-right: 16px;
  padding-left: 8px;
  height: 52px;
  width: 20px;
  fill: #6B6B78;
  outline: none;
  box-sizing: content-box;
  cursor: pointer;
}

.c1 svg:hover,
.c1 svg:focus {
  fill: #231B22;
}

.c1:focus-within legend {
  max-width: 1000px;
  font-weight: 700;
}

.c1:hover fieldset,
.c1:focus-within fieldset {
  border-color: #FF874C;
}

.c2 {
  width: 100%;
  background-color: transparent;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  outline: none;
  height: 100%;
  padding-top: 16px;
  padding-right: 40px;
  padding-bottom: 16px;
  padding-left: 16px;
  color: #231B22;
  border: none;
  font-family: Rubik,sans-serif;
  font-size: 14px;
  font-weight: 400;
  box-sizing: border-box;
}

.c2:focus {
  color: #231B22;
}

.c2:focus + label {
  top: 0;
  left: 16px;
  font-size: 12px;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
  -webkit-transition-duration: 500ms;
  transition-duration: 500ms;
  -webkit-transition-timing-function: cubic-bezier(0,0.75,0.1,1);
  transition-timing-function: cubic-bezier(0,0.75,0.1,1);
  font-weight: 700;
  color: #FF874C;
}

.c2:disabled {
  cursor: not-allowed;
  color: #F5F5FA;
}

.c2::-webkit-input-placeholder {
  color: #6B6B78;
}

.c2::-moz-placeholder {
  color: #6B6B78;
}

.c2:-ms-input-placeholder {
  color: #6B6B78;
}

.c2::placeholder {
  color: #6B6B78;
}

.c2[type="number"]::-webkit-outer-spin-button,
.c2[type="number"]::-webkit-inner-spin-button {
  display: none;
}

.c2:invalid {
  box-shadow: none;
}

.c4 {
  position: absolute;
  top: -7px;
  left: 0;
  padding: 0;
  padding-left: 0px;
  right: 0;
  bottom: 0;
  margin: 0;
  pointer-events: none;
  border-radius: 8px;
  border: 1px solid #D7D7E0;
  padding-left: 12px;
}

.c5 {
  position: relative;
  padding: 0;
  max-width: 0.01px;
  width: auto;
  height: 14px;
  font-weight: normal;
  -webkit-transition: max-width ease 50ms;
  transition: max-width ease 50ms;
  visibility: hidden;
  max-width: 0.01px;
  font-size: 12px;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
}

.c6 {
  padding-left: 4px;
  padding-right: 4px;
}

.c3 {
  position: absolute;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  pointer-events: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  top: 24px;
  left: 16px;
  font-size: 14px;
  font-weight: 400;
  color: #6B6B78;
  -webkit-transform: translateY(-40%);
  -ms-transform: translateY(-40%);
  transform: translateY(-40%);
  -webkit-transition-duration: 500ms;
  transition-duration: 500ms;
  -webkit-transition-timing-function: cubic-bezier(0,0.75,0.1,1);
  transition-timing-function: cubic-bezier(0,0.75,0.1,1);
  color: #FF874C;
}

.c7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-top: 4px;
  color: #FF874C;
}

.c8 {
  margin: 0;
  padding: 0;
  font-size: 14px;
  line-height: 20px;
  font-weight: 400;
  font-family: Rubik;
  color: #231B22;
  color: #6B6B78;
  font-size: 12px;
}

.c0 {
  box-sizing: border-box;
  width: 320px;
}

<div>
  <div
    class="c0"
  >
    <div
      class="c1"
      label="Label"
    >
      <input
        class="c2"
        value=""
      />
      <label
        class="c3"
      >
        Label
      </label>
      <fieldset
        class="c4"
      >
        <legend
          class="c5"
        >
          <span
            class="c6"
          >
            Label
          </span>
        </legend>
      </fieldset>
    </div>
    <div
      class="c7"
    >
      <span
        class="c8"
      >
        Error message
      </span>
    </div>
  </div>
</div>
`;

exports[`<Input /> Snapshots should match with full width 1`] = `
.c1 {
  position: relative;
  display: inline-block;
  vertical-align: top;
  height: 52px;
}

.c1 {
  width: 100%;
}

.c1 svg {
  position: absolute;
  top: 0;
  right: 0;
  padding-right: 16px;
  padding-left: 8px;
  height: 52px;
  width: 20px;
  fill: #6B6B78;
  outline: none;
  box-sizing: content-box;
  cursor: pointer;
}

.c1 svg:hover,
.c1 svg:focus {
  fill: #231B22;
}

.c1:focus-within legend {
  max-width: 1000px;
  font-weight: 700;
}

.c1:hover fieldset,
.c1:focus-within fieldset {
  border-color: #231B22;
}

.c2 {
  width: 100%;
  background-color: transparent;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  outline: none;
  height: 100%;
  padding-top: 16px;
  padding-right: 40px;
  padding-bottom: 16px;
  padding-left: 16px;
  color: #231B22;
  border: none;
  font-family: Rubik,sans-serif;
  font-size: 14px;
  font-weight: 400;
  box-sizing: border-box;
}

.c2:focus {
  color: #231B22;
}

.c2:focus + label {
  top: 0;
  left: 16px;
  font-size: 12px;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
  -webkit-transition-duration: 500ms;
  transition-duration: 500ms;
  -webkit-transition-timing-function: cubic-bezier(0,0.75,0.1,1);
  transition-timing-function: cubic-bezier(0,0.75,0.1,1);
  font-weight: 700;
  color: #231B22;
}

.c2:disabled {
  cursor: not-allowed;
  color: #F5F5FA;
}

.c2::-webkit-input-placeholder {
  color: #6B6B78;
}

.c2::-moz-placeholder {
  color: #6B6B78;
}

.c2:-ms-input-placeholder {
  color: #6B6B78;
}

.c2::placeholder {
  color: #6B6B78;
}

.c2[type="number"]::-webkit-outer-spin-button,
.c2[type="number"]::-webkit-inner-spin-button {
  display: none;
}

.c2:invalid {
  box-shadow: none;
}

.c4 {
  position: absolute;
  top: -7px;
  left: 0;
  padding: 0;
  padding-left: 0px;
  right: 0;
  bottom: 0;
  margin: 0;
  pointer-events: none;
  border-radius: 8px;
  border: 1px solid #D7D7E0;
  padding-left: 12px;
}

.c5 {
  position: relative;
  padding: 0;
  max-width: 0.01px;
  width: auto;
  height: 14px;
  font-weight: normal;
  -webkit-transition: max-width ease 50ms;
  transition: max-width ease 50ms;
  visibility: hidden;
  max-width: 0.01px;
  font-size: 12px;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
}

.c6 {
  padding-left: 4px;
  padding-right: 4px;
}

.c3 {
  position: absolute;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  pointer-events: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  top: 24px;
  left: 16px;
  font-size: 14px;
  font-weight: 400;
  color: #6B6B78;
  -webkit-transform: translateY(-40%);
  -ms-transform: translateY(-40%);
  transform: translateY(-40%);
  -webkit-transition-duration: 500ms;
  transition-duration: 500ms;
  -webkit-transition-timing-function: cubic-bezier(0,0.75,0.1,1);
  transition-timing-function: cubic-bezier(0,0.75,0.1,1);
}

.c0 {
  box-sizing: border-box;
  width: 100%;
}

<div>
  <div
    class="c0"
  >
    <div
      class="c1"
      label="Label"
    >
      <input
        class="c2"
        value=""
      />
      <label
        class="c3"
      >
        Label
      </label>
      <fieldset
        class="c4"
      >
        <legend
          class="c5"
        >
          <span
            class="c6"
          >
            Label
          </span>
        </legend>
      </fieldset>
    </div>
  </div>
</div>
`;

exports[`<Input /> Snapshots should match with helper text and max length 1`] = `
.c1 {
  position: relative;
  display: inline-block;
  vertical-align: top;
  height: 52px;
}

.c1 {
  width: 320px;
}

.c1 svg {
  position: absolute;
  top: 0;
  right: 0;
  padding-right: 16px;
  padding-left: 8px;
  height: 52px;
  width: 20px;
  fill: #6B6B78;
  outline: none;
  box-sizing: content-box;
  cursor: pointer;
}

.c1 svg:hover,
.c1 svg:focus {
  fill: #231B22;
}

.c1:focus-within legend {
  max-width: 1000px;
  font-weight: 700;
}

.c1:hover fieldset,
.c1:focus-within fieldset {
  border-color: #231B22;
}

.c2 {
  width: 100%;
  background-color: transparent;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  outline: none;
  height: 100%;
  padding-top: 16px;
  padding-right: 40px;
  padding-bottom: 16px;
  padding-left: 16px;
  color: #231B22;
  border: none;
  font-family: Rubik,sans-serif;
  font-size: 14px;
  font-weight: 400;
  box-sizing: border-box;
}

.c2:focus {
  color: #231B22;
}

.c2:focus + label {
  top: 0;
  left: 16px;
  font-size: 12px;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
  -webkit-transition-duration: 500ms;
  transition-duration: 500ms;
  -webkit-transition-timing-function: cubic-bezier(0,0.75,0.1,1);
  transition-timing-function: cubic-bezier(0,0.75,0.1,1);
  font-weight: 700;
  color: #231B22;
}

.c2:disabled {
  cursor: not-allowed;
  color: #F5F5FA;
}

.c2::-webkit-input-placeholder {
  color: #6B6B78;
}

.c2::-moz-placeholder {
  color: #6B6B78;
}

.c2:-ms-input-placeholder {
  color: #6B6B78;
}

.c2::placeholder {
  color: #6B6B78;
}

.c2[type="number"]::-webkit-outer-spin-button,
.c2[type="number"]::-webkit-inner-spin-button {
  display: none;
}

.c2:invalid {
  box-shadow: none;
}

.c4 {
  position: absolute;
  top: -7px;
  left: 0;
  padding: 0;
  padding-left: 0px;
  right: 0;
  bottom: 0;
  margin: 0;
  pointer-events: none;
  border-radius: 8px;
  border: 1px solid #D7D7E0;
  padding-left: 12px;
}

.c5 {
  position: relative;
  padding: 0;
  max-width: 0.01px;
  width: auto;
  height: 14px;
  font-weight: normal;
  -webkit-transition: max-width ease 50ms;
  transition: max-width ease 50ms;
  visibility: hidden;
  max-width: 0.01px;
  font-size: 12px;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
}

.c6 {
  padding-left: 4px;
  padding-right: 4px;
}

.c3 {
  position: absolute;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  pointer-events: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  top: 24px;
  left: 16px;
  font-size: 14px;
  font-weight: 400;
  color: #6B6B78;
  -webkit-transform: translateY(-40%);
  -ms-transform: translateY(-40%);
  transform: translateY(-40%);
  -webkit-transition-duration: 500ms;
  transition-duration: 500ms;
  -webkit-transition-timing-function: cubic-bezier(0,0.75,0.1,1);
  transition-timing-function: cubic-bezier(0,0.75,0.1,1);
}

.c7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-top: 4px;
}

.c8 {
  margin: 0;
  padding: 0;
  font-size: 14px;
  line-height: 20px;
  font-weight: 400;
  font-family: Rubik;
  color: #231B22;
  color: #6B6B78;
  font-size: 12px;
}

.c9 {
  margin: 0;
  padding: 0;
  font-size: 14px;
  line-height: 20px;
  font-weight: 400;
  font-family: Rubik;
  color: #231B22;
  color: #6B6B78;
  font-size: 12px;
  margin-left: auto;
}

.c0 {
  box-sizing: border-box;
  width: 320px;
}

<div>
  <div
    class="c0"
  >
    <div
      class="c1"
      label="Label"
    >
      <input
        class="c2"
        maxlength="20"
        value=""
      />
      <label
        class="c3"
      >
        Label
      </label>
      <fieldset
        class="c4"
      >
        <legend
          class="c5"
        >
          <span
            class="c6"
          >
            Label
          </span>
        </legend>
      </fieldset>
    </div>
    <div
      class="c7"
    >
      <span
        class="c8"
      >
        Helper text
      </span>
      <span
        class="c9"
      >
        0
        /
        20
      </span>
    </div>
  </div>
</div>
`;

exports[`<Input /> Snapshots should match with label 1`] = `
.c1 {
  position: relative;
  display: inline-block;
  vertical-align: top;
  height: 52px;
}

.c1 {
  width: 320px;
}

.c1 svg {
  position: absolute;
  top: 0;
  right: 0;
  padding-right: 16px;
  padding-left: 8px;
  height: 52px;
  width: 20px;
  fill: #6B6B78;
  outline: none;
  box-sizing: content-box;
  cursor: pointer;
}

.c1 svg:hover,
.c1 svg:focus {
  fill: #231B22;
}

.c1:focus-within legend {
  max-width: 1000px;
  font-weight: 700;
}

.c1:hover fieldset,
.c1:focus-within fieldset {
  border-color: #231B22;
}

.c2 {
  width: 100%;
  background-color: transparent;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  outline: none;
  height: 100%;
  padding-top: 16px;
  padding-right: 40px;
  padding-bottom: 16px;
  padding-left: 16px;
  color: #231B22;
  border: none;
  font-family: Rubik,sans-serif;
  font-size: 14px;
  font-weight: 400;
  box-sizing: border-box;
}

.c2:focus {
  color: #231B22;
}

.c2:focus + label {
  top: 0;
  left: 16px;
  font-size: 12px;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
  -webkit-transition-duration: 500ms;
  transition-duration: 500ms;
  -webkit-transition-timing-function: cubic-bezier(0,0.75,0.1,1);
  transition-timing-function: cubic-bezier(0,0.75,0.1,1);
  font-weight: 700;
  color: #231B22;
}

.c2:disabled {
  cursor: not-allowed;
  color: #F5F5FA;
}

.c2::-webkit-input-placeholder {
  color: #6B6B78;
}

.c2::-moz-placeholder {
  color: #6B6B78;
}

.c2:-ms-input-placeholder {
  color: #6B6B78;
}

.c2::placeholder {
  color: #6B6B78;
}

.c2[type="number"]::-webkit-outer-spin-button,
.c2[type="number"]::-webkit-inner-spin-button {
  display: none;
}

.c2:invalid {
  box-shadow: none;
}

.c4 {
  position: absolute;
  top: -7px;
  left: 0;
  padding: 0;
  padding-left: 0px;
  right: 0;
  bottom: 0;
  margin: 0;
  pointer-events: none;
  border-radius: 8px;
  border: 1px solid #D7D7E0;
  padding-left: 12px;
}

.c5 {
  position: relative;
  padding: 0;
  max-width: 0.01px;
  width: auto;
  height: 14px;
  font-weight: normal;
  -webkit-transition: max-width ease 50ms;
  transition: max-width ease 50ms;
  visibility: hidden;
  max-width: 0.01px;
  font-size: 12px;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
}

.c6 {
  padding-left: 4px;
  padding-right: 4px;
}

.c3 {
  position: absolute;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  pointer-events: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  top: 24px;
  left: 16px;
  font-size: 14px;
  font-weight: 400;
  color: #6B6B78;
  -webkit-transform: translateY(-40%);
  -ms-transform: translateY(-40%);
  transform: translateY(-40%);
  -webkit-transition-duration: 500ms;
  transition-duration: 500ms;
  -webkit-transition-timing-function: cubic-bezier(0,0.75,0.1,1);
  transition-timing-function: cubic-bezier(0,0.75,0.1,1);
}

.c0 {
  box-sizing: border-box;
  width: 320px;
}

<div>
  <div
    class="c0"
  >
    <div
      class="c1"
      label="Input"
    >
      <input
        class="c2"
        value=""
      />
      <label
        class="c3"
      >
        Input
      </label>
      <fieldset
        class="c4"
      >
        <legend
          class="c5"
        >
          <span
            class="c6"
          >
            Input
          </span>
        </legend>
      </fieldset>
    </div>
  </div>
</div>
`;
